--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = zsh/prezto
 	url = https://github.com/sorin-ionescu/prezto.git
   ignore = dirty
+[submodule "tmux/tmux-powerline"]
+	path = tmux/tmux-powerline
+	url = git@github.com:erikw/tmux-powerline.git
+  ignore = dirty
