--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
   ignore = dirty
 [submodule "tmux/tmux-powerline"]
 	path = tmux/tmux-powerline
-	url = git@github.com:erikw/tmux-powerline.git
+	url = https://github.com/erikw/tmux-powerline.git
   ignore = dirty
