--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,10 +13,10 @@ bind-key ^V split-window -h
 bind-key s split-window
 bind-key ^S split-window
 
-bind-key J resize-pane -D
-bind-key K resize-pane -U
-bind-key H resize-pane -L
-bind-key L resize-pane -R
+bind-key j resize-pane -D
+bind-key k resize-pane -U
+bind-key h resize-pane -L
+bind-key l resize-pane -R
 
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
