Updates to tmux powerline

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,11 @@ bind-key ^V split-window -h
 bind-key s split-window
 bind-key ^S split-window
 
+bind H select-pane -L
+bind J select-pane -D
+bind K select-pane -U
+bind L select-pane -R
+
 bind-key j resize-pane -D
 bind-key k resize-pane -U
 bind-key h resize-pane -L
@@ -61,6 +66,9 @@ bind C-] run '~/.yadr/tmux/tmux-powerline/mute_powerline.sh right'	# Mute right
 unbind C-b
 set -g prefix `
 bind-key ` send-prefix
+
+# Reload config
+bind-key r source-file ~/.tmux.conf
 
 # No escape time for vi mode
 set -sg escape-time 0
